--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -31,6 +31,7 @@
     &__high {
         justify-content: end;
         gap: 20px;
+        width: 100%;
 
         & img {
             display: none;
