--- a/scss/blocks/_popup.scss
+++ b/scss/blocks/_popup.scss
@@ -26,7 +26,6 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-
 }
 
 .popup {
@@ -209,6 +208,30 @@
     color: red;
 }
 
+.checkb-lbl::before {
+    content: "";
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    background-color: #F4F7FB;
+    top: 464px;
+    left: 34px;
+}
+
+.checkb-lbl {
+    margin-left: 28px;
+}
+
+.checkb {
+    display: none;
+}
+
+.active .checkb-lbl::before {
+    background-image: url('../../images/check.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 @media screen and (min-width: 320px) and (max-width: 480px) {
     .popup {
         position: fixed;
@@ -328,10 +351,17 @@
     .error_message {
         @include block-text (12px, 14px);
     }
+
+    .checkb-lbl::before {
+        content: "";
+        position: absolute;
+        width: 16px;
+        height: 16px;
+        background-color: #F4F7FB;
+        top: 548px;
+        left: 20px;
+    }
 }
-
-
-
 
 @media screen and (max-width: 320px) {
     .popup {
@@ -410,5 +440,15 @@
 
     .input-field_modal {
         width: 100%;
+    }
+
+    .checkb-lbl::before {
+        content: "";
+        position: absolute;
+        width: 16px;
+        height: 16px;
+        background-color: #F4F7FB;
+        top: 578px;
+        left: 20px;
     }
 }
