--- a/scss/style.css
+++ b/scss/style.css
@@ -496,9 +496,6 @@ body {
 .banner__container {
   font-family: "Rubik", sans-serif;
 }
-.banner__container * {
-  outline: 1px solid palevioletred;
-}
 .banner__slider {
   position: relative;
 }
@@ -775,7 +772,7 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     width: 37px;
   }
 }
-@media screen and (min-width: 240px) and (max-width: 767px) {
+@media screen and (min-width: 100px) and (max-width: 767px) {
   .banner__slide {
     min-height: 130vw;
   }
@@ -794,37 +791,119 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   .banner__slide_five {
     background-image: url("../images/block2_slider/banner5_girl_mobile.png");
   }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) and (max-width: 674px) {
+  .banner__slide {
+    min-height: 138vw;
+  }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) and (max-width: 595px) {
+  .banner__slide {
+    min-height: 144vw;
+  }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) and (max-width: 526px) {
+  .banner__slide {
+    min-height: 153vw;
+  }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) and (max-width: 454px) {
+  .banner__slide {
+    min-height: 165vw;
+  }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) {
   .banner__info {
-    position: absolute;
-    top: 66%;
+    margin-top: 91%;
     width: 100%;
-    min-height: 200px;
     margin-left: 0;
     padding: 25px;
     background-color: #FFFFFF;
   }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) and (max-width: 454px) {
+  .banner__info {
+    padding: 15px;
+    margin-bottom: 40px;
+  }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) {
   .banner__title {
     font-weight: 600;
     font-size: 30px;
-    line-height: 39px;
+    line-height: 35px;
   }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) and (max-width: 526px) {
+  .banner__title {
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 30px;
+  }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) and (max-width: 333px) {
+  .banner__title {
+    font-weight: 600;
+    font-size: 23px;
+    line-height: 26px;
+  }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) {
   .banner__text {
     font-weight: 400;
     font-size: 18px;
-    line-height: 30px;
+    line-height: 25px;
   }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) and (max-width: 333px) {
+  .banner__text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) {
   .banner__navigation {
     left: 5%;
-    top: 63%;
+    top: 83vw;
     width: 90%;
     justify-content: center;
   }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) {
   .banner__nav-button {
     display: none;
   }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) and (max-width: 245px) {
+  .banner__button-more {
+    max-width: 200px;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    font-family: "Rubik", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+    background-color: #D71635;
+    color: #FFFFFF;
+    cursor: pointer;
+  }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) {
   .swiper-pagination-bullet {
     width: 18%;
     height: 5px;
+  }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) and (max-width: 445px) {
+  .swiper-pagination-bullet {
+    width: 16%;
+  }
+}
+@media screen and (min-width: 100px) and (max-width: 767px) and (max-width: 222px) {
+  .swiper-pagination-bullet {
+    width: 14%;
   }
 }
 .about__info {
